[package]
name = "hoarder"
version = "0.1.0"
authors = ["Evan Alvarez <evanalvarez@tutanota.com>"]
description = "The all-in-one renaming utility for people with too many files"
edition = "2021"
repository = "https://github.com/evfeal/hoarder"
license = "GPL-3.0"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
glob = "0.3.1"
infer = "0.16.0"
kamadak-exif = "0.5.5"
lazy_static = "1.5.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.15"
url = "2.5.2"
