[package]
name = "hoarder"
version = "0.1.0"
authors = ["Evan Alvarez <evanalvarez@tutanota.com>"]
description = "The all-in-one renaming utility for people with too many files"
edition = "2021"
repository = "https://github.com/evfeal/hoarder"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
glob = "0.3.1"
infer = "0.16.0"
kamadak-exif = "0.5.5"
once_cell = "1.19.0"
rayon = "1.10.0"
regex = "1.10.5"
walkdir = "2.5.0"
